--- a/InitialProject/InitialProject/View/OwnerForm.xaml
+++ b/InitialProject/InitialProject/View/OwnerForm.xaml
@@ -39,8 +39,8 @@
         <TextBox x:Name="txtCountry" Canvas.Left="228" TextWrapping="Wrap" Canvas.Top="95" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"></TextBox>
         <Label Content="Id:" Canvas.Left="10" Canvas.Top="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <TextBox x:Name="txtId" Canvas.Left="38" TextWrapping="Wrap" Text="" Canvas.Top="20" Width="120"/>
-        <DataGrid Height="264" Width="622" x:Name="DataPanel" Canvas.Left="368" Canvas.Top="10"   
-                  ItemsSource="{Binding Path = Hotels}" SelectedItem="{Binding Path=SelectedHotel}" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <DataGrid x:Name="DataPanel" Height="264" Width="622" Canvas.Left="368" Canvas.Top="10"   
+                  ItemsSource="{Binding Path = Hotels}" SelectedItem="{Binding Path=SelectedHotel}" HorizontalAlignment="Left" VerticalAlignment="Center" Loaded="OnLoad">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Name" Binding="{Binding Name}" Width="*"/>
                 <DataGridTextColumn Header="City" Binding="{Binding City}" Width="*"/>
