--- a/InitialProject/InitialProject/View/GradeForm.xaml
+++ b/InitialProject/InitialProject/View/GradeForm.xaml
@@ -13,9 +13,9 @@
         <Label Grid.Column="1" Content="Comment:" HorizontalAlignment="Left" Margin="10,162,0,0" VerticalAlignment="Top"/>
         <Label Content="Enter ID of guest:" HorizontalAlignment="Left" Margin="10,47,0,0" VerticalAlignment="Top"/>
         <ComboBox x:Name="GuestsCB" HorizontalAlignment="Left" Margin="110,51,0,0" VerticalAlignment="Top" Width="120" Loaded="GusetLoaded"/>
-        <TextBox x:Name="CommentText" HorizontalAlignment="Left" Margin="14,183,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="296" Height="62"/>
+        <TextBox x:Name="CommentText" HorizontalAlignment="Left" Margin="14,183,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="369" Height="103"/>
         <Button Grid.Column="1" Content="Cancel" HorizontalAlignment="Left" Margin="202,370,0,0" VerticalAlignment="Top" Height="31" Width="79"/>
-        <Button x:Name="SaveGrade" Content="Grade Guest" HorizontalAlignment="Left" Margin="301,367,0,0" VerticalAlignment="Top" Height="34" Width="99" Grid.Column="1" Click="SaveGrade"/>
+        <Button x:Name="SaveGrade" Content="Grade Guest" HorizontalAlignment="Left" Margin="301,367,0,0" VerticalAlignment="Top" Height="34" Width="99" Grid.Column="1" Click="SaveGrade_Click"/>
         <ComboBox x:Name="CB1" HorizontalAlignment="Left" Margin="153,82,0,0" VerticalAlignment="Top" Width="120" Loaded="Fill"/>
         <ComboBox x:Name="CB2" HorizontalAlignment="Left" Margin="134,121,0,0" VerticalAlignment="Top" Width="120" Loaded="Fill1"/>
     </Grid>
