--- a/InitialProject/InitialProject/View/Guest1Overview.xaml
+++ b/InitialProject/InitialProject/View/Guest1Overview.xaml
@@ -7,6 +7,35 @@
         mc:Ignorable="d"
         Title="Guest1Overview" Height="450" Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="760"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="15"/>
+            <RowDefinition Height="89*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="15"/>
+        </Grid.RowDefinitions>
+
+        <ToolBar Grid.Row="0" Grid.ColumnSpan="3">
+            <Button Click="OpenGuest1Form">
+                <StackPanel Orientation="Horizontal" Width="71">
+                    <Image Source="../Resources/Images/add.png" Width="20" Height="25" RenderTransformOrigin="0.5,0.6"/>
+                    <TextBlock Text="Search" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+            <Button Click="OpenReserveForm" >
+                <StackPanel Orientation="Horizontal" Width="87">
+                    <Image Source="../Resources/Images/add.png" Width="20" Height="25"/>
+                    <TextBlock Text="Reserve" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="57" />
+                </StackPanel>
+            </Button>
+            <Separator/>
+        </ToolBar>
+
     </Grid>
 </Window>
