--- a/InitialProject/InitialProject/View/ReservationForm.xaml
+++ b/InitialProject/InitialProject/View/ReservationForm.xaml
@@ -5,18 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.View"
         mc:Ignorable="d"
-        Title="ReservationForm" Height="339" Width="363">
+        Title="ReservationForm" Height="339" Width="465">
     <Grid Margin="0,0,10,5">
         <Button Content="Reserve" HorizontalAlignment="Left" Margin="81,230,0,0" VerticalAlignment="Top" Height="23" Width="56" Click="Reserve"/>
         <Button Content="Cancel" HorizontalAlignment="Left" Margin="170,230,0,0" VerticalAlignment="Top" Height="23" Width="49" Click="Close"/>
         <DatePicker x:Name="Date1" HorizontalAlignment="Left" Margin="144,77,0,0" VerticalAlignment="Top" Height="28" Width="127"/>
         <DatePicker x:Name="Date2" HorizontalAlignment="Left" Margin="144,105,0,0" VerticalAlignment="Top" Height="29" Width="127"/>
-        <TextBox x:Name="txtNumberOfDays" HorizontalAlignment="Left" Margin="144,139,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="22"/>
+        <TextBox x:Name="txtNumberOfDays" IsEnabled="false" HorizontalAlignment="Left" Margin="144,139,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" Height="22"/>
         <Label Content="Number of days:" HorizontalAlignment="Left" Margin="26,132,0,0" VerticalAlignment="Top" Height="31" Width="111"/>
-        <TextBox x:Name="txtNumberOfGuests" HorizontalAlignment="Left" Margin="144,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="21"/>
+        <TextBox x:Name="txtNumberOfGuests" IsEnabled="false" HorizontalAlignment="Left" Margin="144,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="270" Height="21"/>
         <Label Content="Number of guests:" HorizontalAlignment="Left" Margin="10,163,0,0" VerticalAlignment="Top" Height="30" Width="135"/>
         <Label Content="Start date:" HorizontalAlignment="Left" Margin="57,71,0,0" VerticalAlignment="Top" Height="31" Width="80"/>
-        <ComboBox x:Name="HotelNameCB" HorizontalAlignment="Left" Margin="144,46,0,0" VerticalAlignment="Top" Width="150" Height="25"/>
+        <ComboBox  x:Name="HotelNameCB" HorizontalAlignment="Left" Margin="144,46,0,0" VerticalAlignment="Top" Width="150" Height="25" Loaded="LoadHotels" SelectionChanged="DefaultValuesForTXT"/>
         <Label Content="End date:" HorizontalAlignment="Left" Margin="62,102,0,0" VerticalAlignment="Top" Height="30" Width="75"/>
         <Label Content="Name:" HorizontalAlignment="Left" Margin="85,41,0,0" VerticalAlignment="Top" Height="30" Width="55"/>
 
