--- a/InitialProject/InitialProject/View/Guest2/Guest2Overview.xaml
+++ b/InitialProject/InitialProject/View/Guest2/Guest2Overview.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:TravelAgency.View.Guest2"
         mc:Ignorable="d"
         Title="Guest2Overview" Height="450" Width="800">
-    <Grid Loaded="GradeAlert">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="760"/>
