--- a/InitialProject/InitialProject/View/Guest2/Guest2Form.xaml
+++ b/InitialProject/InitialProject/View/Guest2/Guest2Form.xaml
@@ -7,6 +7,14 @@
         mc:Ignorable="d"
         Title="Guest2Form" Height="450" Width="800">
     <Grid>
-        
+        <DataGrid x:Name="DataPanel" Margin="314,108,25,108" />
+        <TextBox x:Name="txtCity" HorizontalAlignment="Left" Margin="60,116,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtCountry" HorizontalAlignment="Left" Margin="60,139,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtDuration" HorizontalAlignment="Left" Margin="60,162,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtLeng" HorizontalAlignment="Left" Margin="60,185,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtNum" HorizontalAlignment="Left" Margin="60,0,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Width="120"/>
+        <Button Content="Search" HorizontalAlignment="Left" Margin="34,266,0,0" VerticalAlignment="Top" Click="Search"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" Margin="100,266,0,0" VerticalAlignment="Top" Click="Cancel"/>
+
     </Grid>
 </Window>
