--- a/InitialProject/InitialProject/View/Owner/OwnerOverview.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerOverview.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TravelAgency.Forms"
         mc:Ignorable="d"
-        Title="Comments" Height="450" Width="800" ResizeMode="NoResize" WindowStyle="SingleBorderWindow"
+        Title="Comments" Height="768" Width="1024" ResizeMode="NoResize" WindowStyle="SingleBorderWindow"
         WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -22,16 +22,14 @@
         </Grid.RowDefinitions>
 
         <ToolBar Grid.Row="0" Grid.ColumnSpan="3">
-            <Button Click="OpenOwnerForm">
-                <StackPanel Orientation="Horizontal" Width="71">
-                    <Image Source="../Resources/Images/add.png" Width="20" Height="25" RenderTransformOrigin="0.5,0.6"/>
+            <Button Click="OpenOwnerForm" Width="62">
+                <StackPanel Orientation="Horizontal" Width="52">
                     <TextBlock Text="Create" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" />
                 </StackPanel>
             </Button>
             <Separator/>
             <Button Click="OpenGradeForm" >
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="../Resources/Images/add.png" Width="20" Height="25"/>
                     <TextBlock Text="Grade" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="46" />
                 </StackPanel>
             </Button>
