--- a/InitialProject/InitialProject/View/Guide/GuideOverview.xaml
+++ b/InitialProject/InitialProject/View/Guide/GuideOverview.xaml
@@ -28,7 +28,7 @@
                 </StackPanel>
             </Button>
             <Separator/>
-            <Button>
+            <Button Click="OpenLiveTourForm">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="../Resources/Images/add.png" Width="20" Height="25"/>
                     <TextBlock Text="LiveTour" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="46" />
