--- a/InitialProject/InitialProject/View/Owner/OwnerForm.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerForm.xaml
@@ -6,54 +6,60 @@
         xmlns:local="clr-namespace:TravelAgency.Forms"
         xmlns:VisualBasic="clr-namespace:Microsoft.VisualBasic;assembly=Microsoft.VisualBasic.Core" xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Classic" xmlns:Model="clr-namespace:TravelAgency.Model" x:Class="TravelAgency.Forms.OwnerForm"
         mc:Ignorable="d"
-        Title="Create new accommodation" Height="768" Width="1024" WindowStartupLocation="CenterScreen">
+        Title="Create new accommodation" Height="392" Width="749" WindowStartupLocation="CenterScreen" FontSize="17">
     <Canvas Margin="0,0,0,-6">
-        <Label Content="Name:" Canvas.Left="10" Canvas.Top="57" HorizontalAlignment="Center" VerticalAlignment="Top" Height="28" Width="44"/>
-        <Label Content="Location:" Canvas.Left="10" Canvas.Top="119" HorizontalAlignment="Left" VerticalAlignment="Top" Height="26" Width="66"/>
-        <Label Content="Type:" Canvas.Left="11" Canvas.Top="225" HorizontalAlignment="Center" VerticalAlignment="Top" Height="27" Width="49"/>
-        <Label Content="Max Guests:" Canvas.Left="10" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Top" Height="51"/>
-        <Label Content="Min Days:" Canvas.Left="10" Canvas.Top="350" HorizontalAlignment="Center" VerticalAlignment="Top" Height="51"/>
-        <Label Content="Number of cancel days:" Canvas.Left="11" Canvas.Top="411" HorizontalAlignment="Left" VerticalAlignment="Top" Height="30"/>
-        <TextBox x:Name="txtName" Canvas.Left="59" TextWrapping="Wrap" Canvas.Top="57" Width="120"
-                 Text="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" VerticalAlignment="Top" Height="36" TextChanged="NameValidation"/>
-        <TextBox x:Name="txtCity" Canvas.Left="44" TextWrapping="Wrap" Canvas.Top="170" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" 
-                 Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" Height="35" TextChanged="CityValidation"/>
-        <TextBox x:Name="brMax" Canvas.Left="88" TextWrapping="Wrap" Canvas.Top="289" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"
-                 Text="{Binding Path=Max, UpdateSourceTrigger=PropertyChanged}" Height="35" TextChanged="MaxGuestValidation"/>
-        <TextBox x:Name="brMin" Canvas.Left="88" TextWrapping="Wrap" Canvas.Top="350" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" TextChanged="MinDaysValidation"
-                 Text="{Binding Path=Min, UpdateSourceTrigger=PropertyChanged}" Height="35"/>
-        <TextBox x:Name="brDaysLeft" Canvas.Left="157" TextWrapping="Wrap" Canvas.Top="411" Width="120" HorizontalAlignment="Left" VerticalAlignment="Top" TextChanged="CancelDaysValidation"
-                 Text="{Binding Path=DaysLeft, UpdateSourceTrigger=PropertyChanged}" Height="36"/>
-        <Button x:Name="saveBTN" Click="Save" Content="Save" Canvas.Left="41" Canvas.Top="563" HorizontalAlignment="Center" VerticalAlignment="Top" Height="69" Width="89" />
-        <Button Content="Cancel" Canvas.Left="239" Canvas.Top="565" Click="Cancel" Height="67" Width="85" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <RadioButton x:Name="RadioHouse" Content="House" Canvas.Left="62" Canvas.Top="231" GroupName="type" HorizontalAlignment="Center" VerticalAlignment="Top" Height="21" Checked="HouseCheckValidation">
+        <Label Content="Name:" Canvas.Left="22" Canvas.Top="7" HorizontalAlignment="Center" VerticalAlignment="Top" Height="28" Width="66" FontSize="17"/>
+        <Label Content="Location:" Canvas.Left="22" Canvas.Top="45" HorizontalAlignment="Center" VerticalAlignment="Top" Height="33" Width="94"/>
+        <Label Content="Type:" Canvas.Left="11" Canvas.Top="121" HorizontalAlignment="Center" VerticalAlignment="Top" Height="35" Width="49"/>
+        <Label Content="Max Guests:" Canvas.Left="10" Canvas.Top="179" HorizontalAlignment="Center" VerticalAlignment="Top" Height="35"/>
+        <Label Content="Min Days:" Canvas.Left="10" Canvas.Top="210" HorizontalAlignment="Center" VerticalAlignment="Top" Height="33"/>
+        <Label Content="Number of cancel days:" Canvas.Left="12" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top" Height="30"/>
+        <TextBox x:Name="txtName" Canvas.Left="104" TextWrapping="Wrap" Canvas.Top="9" Width="120"
+                 Text="{Binding Path=Name, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" VerticalAlignment="Top" Height="28" TextChanged="NameValidation"/>
+        <TextBox x:Name="txtCity" Canvas.Left="77" TextWrapping="Wrap" Canvas.Top="89" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" 
+                 Text="{Binding Path=City, UpdateSourceTrigger=PropertyChanged}" Height="30" TextChanged="CityValidation"/>
+        <TextBox x:Name="brMax" Canvas.Left="108" TextWrapping="Wrap" Canvas.Top="181" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top"
+                 Text="{Binding Path=Max, UpdateSourceTrigger=PropertyChanged}" Height="30" TextChanged="MaxGuestValidation"/>
+        <TextBox x:Name="brMin" Canvas.Left="102" TextWrapping="Wrap" Canvas.Top="215" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" TextChanged="MinDaysValidation"
+                 Text="{Binding Path=Min, UpdateSourceTrigger=PropertyChanged}" Height="28"/>
+        <TextBox x:Name="brDaysLeft" Canvas.Left="200" TextWrapping="Wrap" Canvas.Top="255" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" TextChanged="CancelDaysValidation"
+                 Text="{Binding Path=DaysLeft, UpdateSourceTrigger=PropertyChanged}" Height="31"/>
+        <Button x:Name="saveBTN" Click="Save" Content="Save" Canvas.Left="562" Canvas.Top="13" HorizontalAlignment="Left" VerticalAlignment="Top" Height="40" Width="165" />
+        <Button Content="Cancel" Canvas.Left="562" Canvas.Top="104" Click="Cancel" Height="28" Width="165" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <RadioButton x:Name="RadioHouse" Content="House" Canvas.Left="62" Canvas.Top="131" GroupName="type" HorizontalAlignment="Center" VerticalAlignment="Top" Height="21" Checked="HouseCheckValidation" Width="67">
         </RadioButton>
-        <RadioButton x:Name="RadioHotel" Content="Hotel" Canvas.Left="186" Canvas.Top="231" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type" Height="21" Checked="HotelCheckValidation">
+        <RadioButton x:Name="RadioHotel" Content="Hotel" Canvas.Left="188" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type" Height="21" Checked="HotelCheckValidation">
         </RadioButton>
-        <RadioButton x:Name="RadioApartment" Content="Apartment" Canvas.Left="250" Canvas.Top="231" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type" Height="21" Checked="ApartmentCheckValidation">
+        <RadioButton x:Name="RadioApartment" Content="Apartment" Canvas.Left="256" Canvas.Top="134" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type" Height="21" Checked="ApartmentCheckValidation">
         </RadioButton>
-        <RadioButton x:Name="RadioHut" Content="Hut" Canvas.Left="130" Canvas.Top="231" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type" Height="21" Checked="HutCheckValidation">
+        <RadioButton x:Name="RadioHut" Content="Hut" Canvas.Left="133" Canvas.Top="131" HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="type" Height="21" Checked="HutCheckValidation">
         </RadioButton>
-        <Label Content="City:" Canvas.Left="11" Canvas.Top="170" HorizontalAlignment="Left" VerticalAlignment="Top" Height="26" Width="39"/>
-        <Label Content="Country:" Canvas.Left="166" Canvas.Top="170" HorizontalAlignment="Left" VerticalAlignment="Top" Height="26" Width="59"/>
-        <TextBox x:Name="txtCountry" Canvas.Left="228" TextWrapping="Wrap" Canvas.Top="170" Width="120" HorizontalAlignment="Center" VerticalAlignment="Top" Height="35" TextChanged="CountryValidation"></TextBox>
-        <DataGrid x:Name="DataPanel" AutoGenerateColumns="True" Height="522" Width="646" Canvas.Left="368" Canvas.Top="10"   
-                  ItemsSource="{Binding Path = Hotels}" SelectedItem="{Binding Path=SelectedHotel}" HorizontalAlignment="Center" VerticalAlignment="Top" Loaded="OnLoad">
-        </DataGrid>
-        <Label Content="Insert Picture URL:" Canvas.Left="12" Canvas.Top="480" HorizontalAlignment="Left" Height="36" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtImg" Canvas.Left="121" TextWrapping="Wrap" Text="" Canvas.Top="480" Width="168" HorizontalAlignment="Left" VerticalAlignment="Top" Height="36" TextChanged="UrlValidation"/>
-        <Button x:Name="AddImgButton" Content="Add" IsEnabled ="False" Canvas.Left="294" Canvas.Top="480" Click="AddImage" HorizontalAlignment="Left" Height="40" VerticalAlignment="Top"/>
-        <Button Content="Start Demo" Height="69" Width="72" HorizontalAlignment="Left" Canvas.Top="563" VerticalAlignment="Center" Canvas.Left="153"></Button>
-        <ListBox Height="148" Width="646" x:Name="ImageList" Canvas.Left="368" Canvas.Top="532" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Button Content="Delete" Canvas.Left="325" Canvas.Top="480" Click="DeleteImage" Height="40" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Label x:Name="LabelNameValidator" Content="" Canvas.Left="56" Canvas.Top="93" Height="21" Width="140" HorizontalAlignment="Left" Foreground="Red"/>
-        <Label x:Name="LabelCityValidator" Content="" Canvas.Left="45" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Center" Width="119" Height="26" Foreground="Red"/>
-        <Label x:Name="LabelCountryValidator" Content="" Canvas.Left="228" Canvas.Top="205" HorizontalAlignment="Left" VerticalAlignment="Center" Width="120" Foreground="Red"/>
-        <Label x:Name="LabelMaxGuestValidator" Content="" Canvas.Left="89" Canvas.Top="324" HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" Foreground="Red"/>
-        <Label x:Name="LabelMinDaysValidator" Content="" Canvas.Left="89" Canvas.Top="385" HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" Foreground="Red"/>
-        <Label x:Name="LabelCancelDaysValidator" Content="" Canvas.Left="158" Canvas.Top="447" HorizontalAlignment="Center" VerticalAlignment="Top" Width="162" Foreground="Red"/>
-        <Label x:Name="LabelImgValidator" Content="Please add at least one image" Canvas.Left="368" Canvas.Top="685" HorizontalAlignment="Left" VerticalAlignment="Top" Width="173" Foreground="Red"/>
-        <Label x:Name="LabelTypeValidator" Content="Please select one option" Canvas.Left="65" Canvas.Top="245" HorizontalAlignment="Left" VerticalAlignment="Top" Width="232" Foreground="Red"/>
-        <Label x:Name="LabelUrlValidator" Content="" Canvas.Left="121" Canvas.Top="516" HorizontalAlignment="Left" VerticalAlignment="Center" Width="167" Foreground="Red"/>
+        <Label Content="City:" Canvas.Left="22" Canvas.Top="84" HorizontalAlignment="Center" VerticalAlignment="Top" Height="30" Width="44"/>
+        <Label Content="Country:" Canvas.Left="300" Canvas.Top="87" HorizontalAlignment="Left" VerticalAlignment="Center" Height="34" Width="80"/>
+        <TextBox x:Name="txtCountry" Canvas.Left="391" TextWrapping="Wrap" Canvas.Top="90" Width="120" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" TextChanged="CountryValidation" FontSize="10"></TextBox>
+        <Label Content="Insert Picture URL:" Canvas.Left="16" Canvas.Top="297" HorizontalAlignment="Center" Height="36" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtImg" Canvas.Left="168" TextWrapping="Wrap" Text="" Canvas.Top="301" Width="168" HorizontalAlignment="Center" VerticalAlignment="Top" Height="35" TextChanged="UrlValidation"/>
+        <Button x:Name="AddImgButton" Content="Add" IsEnabled ="False" Canvas.Left="336" Canvas.Top="303" Click="AddImage" HorizontalAlignment="Center" Height="33" VerticalAlignment="Top"/>
+        <Button Content="Start Demo" Height="39" Width="165" HorizontalAlignment="Left" Canvas.Top="60" VerticalAlignment="Center" Canvas.Left="562"></Button>
+        <ListBox Height="148" Width="312" x:Name="ImageList" Canvas.Left="437" Canvas.Top="216" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Button Content="Delete" Canvas.Left="371" Canvas.Top="303" Click="DeleteImage" Height="33" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Label x:Name="LabelNameValidator" Content="" Canvas.Left="234" Canvas.Top="10" Height="32" Width="140" HorizontalAlignment="Left" Foreground="Red" VerticalAlignment="Top" FontSize="10"/>
+        <Label x:Name="LabelCityValidator" Content="" Canvas.Left="197" Canvas.Top="90" HorizontalAlignment="Left" VerticalAlignment="Center" Width="103" Height="26" Foreground="Red" FontSize="10"/>
+        <Label x:Name="LabelCountryValidator" Content="" Canvas.Left="393" Canvas.Top="118" HorizontalAlignment="Left" VerticalAlignment="Center" Width="120" Foreground="Red" RenderTransformOrigin="0.5,0.5" Height="28" FontSize="10">
+            <Label.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform AngleX="0.254"/>
+                    <RotateTransform/>
+                    <TranslateTransform X="-0.004"/>
+                </TransformGroup>
+            </Label.RenderTransform>
+        </Label>
+        <Label x:Name="LabelMaxGuestValidator" Content="" Canvas.Left="233" Canvas.Top="181" HorizontalAlignment="Center" VerticalAlignment="Top" Width="136" Foreground="Red" FontSize="10"/>
+        <Label x:Name="LabelMinDaysValidator" Content="" Canvas.Left="230" Canvas.Top="218" HorizontalAlignment="Center" VerticalAlignment="Top" Width="147" Foreground="Red" Height="28" FontSize="10"/>
+        <Label x:Name="LabelCancelDaysValidator" Content="" Canvas.Left="325" Canvas.Top="258" HorizontalAlignment="Center" VerticalAlignment="Top" Width="107" Foreground="Red" FontSize="10"/>
+        <Label x:Name="LabelImgValidator" Content="Please add at least one image" Canvas.Left="437" Canvas.Top="183" HorizontalAlignment="Center" VerticalAlignment="Top" Width="173" Foreground="Red" FontSize="10"/>
+        <Label x:Name="LabelTypeValidator" Content="Please select one option" Canvas.Left="16" Canvas.Top="153" HorizontalAlignment="Center" VerticalAlignment="Top" Width="232" Foreground="Red" FontSize="10"/>
+        <Label x:Name="LabelUrlValidator" Content="" Canvas.Left="165" Canvas.Top="336" HorizontalAlignment="Left" VerticalAlignment="Top" Width="167" Foreground="Red" FontSize="10"/>
     </Canvas>
 </Window>
