--- a/InitialProject/InitialProject/View/Owner/OwnerProfil.xaml
+++ b/InitialProject/InitialProject/View/Owner/OwnerProfil.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="OwnerProfil" Height="450" Width="800">
     <Grid Loaded="OnLoad">
-        <Label x:Name="SuperOwnerLabel" Content="" HorizontalAlignment="Left" Margin="304,10,0,0" VerticalAlignment="Top" Width="124" FontSize="30" Loaded="SuperOwnerLabel_Loaded"/>
+        <Label x:Name="SuperOwnerLabel" Content="" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Width="268" FontSize="30" Loaded="SuperOwnerLabel_Loaded"/>
         <Label Content="Username:" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="159" FontSize="30"/>
         <TextBox x:Name="UsernameTXT" HorizontalAlignment="Left" Margin="169,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="347" Height="43" FontSize="20" Loaded="OnLoad"/>
         <Button Content="Change" HorizontalAlignment="Left" Margin="521,72,0,0" VerticalAlignment="Top" Height="43" Width="113"/>
