--- a/InitialProject/InitialProject/View/Guest1/Guest1Overview.xaml
+++ b/InitialProject/InitialProject/View/Guest1/Guest1Overview.xaml
@@ -35,6 +35,13 @@
                 </StackPanel>
             </Button>
             <Separator/>
+            <Button Click="OpenAccount">
+                <StackPanel Orientation="Horizontal" Width="87">
+                    <Image Source="../Resources/Images/add.png" Width="20" Height="25"/>
+                    <TextBlock Text="Account" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="57" />
+                </StackPanel>
+            </Button>
+            <Separator/>
         </ToolBar>
 
     </Grid>
