--- a/InitialProject/InitialProject/View/Guide/GuideLiveTour.xaml
+++ b/InitialProject/InitialProject/View/Guide/GuideLiveTour.xaml
@@ -13,6 +13,7 @@
         <ListBox x:Name="ListCheckPoints" Margin="864,10,0,143"/>
         <Button Content="Activate check point" HorizontalAlignment="Left" Margin="880,296,0,0" VerticalAlignment="Top" Height="39" Width="129" Click="ActivateCheckPoint"/>
         <Button Content="Finish Tour" HorizontalAlignment="Left" Margin="475,297,0,0" VerticalAlignment="Top" Height="38" Width="97" Click="FinishToruForced"/>
+        <Button Content="Cancel Tour" HorizontalAlignment="Left" Margin="596,296,0,0" VerticalAlignment="Top" Height="39" Width="99" Click="CancelTour"/>
 
     </Grid>
 </Window>
