--- a/InitialProject/InitialProject/View/Guide/GuideOverview.xaml
+++ b/InitialProject/InitialProject/View/Guide/GuideOverview.xaml
@@ -35,6 +35,13 @@
                 </StackPanel>
             </Button>
             <Separator/>
+            <Button Click="OpenTourStatisticForm">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="../Resources/Images/add.png" Width="20" Height="25"/>
+                    <TextBlock Text="Tour Statistic" FontSize="14" VerticalAlignment="Center" Margin="5,0,0,0" Width="46" />
+                </StackPanel>
+            </Button>
+            <Separator/>
         </ToolBar>
 
     </Grid>
